--- a/.github/workflows/vsce_action.yml
+++ b/.github/workflows/vsce_action.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - run: npm install
-      - uses: lannonbr/vsce-action@2.0.0
+      - uses: lannonbr/vsce-action@master
         with:
           args: "publish -p $VSCE_TOKEN"
         env:
