--- a/.github/workflows/vsce_action.yml
+++ b/.github/workflows/vsce_action.yml
@@ -1,38 +1,8 @@
-# # This is a basic workflow to help you get started with Actions
-
-# name: GitHub Action for vsce
-
-# # Controls when the action will run.
-# on:
-#   # Triggers the workflow on push or pull request events but only for the main branch
-#   push:
-#     branches: [main]
-
-#   # Allows you to run this workflow manually from the Actions tab
-#   # workflow_dispatch:
-
-# # A workflow run is made up of one or more jobs that can run sequentially or in parallel
-# jobs:
-#   # This workflow contains a single job called "build"
-#   deploy:
-#     # The type of runner that the job will run on
-#     runs-on: ubuntu-latest
-
-#     # Steps represent a sequence of tasks that will be executed as part of the job
-#     steps:
-#       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-#       - run: npm install
-#       - uses: lannonbr/vsce-action@master
-#         with:
-#           args: "publish -p $VSCE_TOKEN"
-#         env:
-#           VSCE_TOKEN: ${{ secrets.VSCE_TOKEN }}
-
 on:
   push:
     branches:
       - main
-name: Deploy Extension
+name: GitHub Action for VSCE
 jobs:
   deploy:
     runs-on: ubuntu-latest
