testing gh action

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nightfall-theme",
   "displayName": "Nightfall Theme",
   "description": "Vibrant yet subtle pastel colours on a dark palette for those long days of coding.",
-  "publisher": "Ayush-Lal",
+  "publisher": "AyushL",
   "author": {
     "name": "Ayush Lal"
   },
