--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "nightfall-theme",
-  "displayName": "Nightfall Theme",
+  "name": "darkly-theme",
+  "displayName": "Darkly Theme",
   "description": "Vibrant yet subtle pastel colours on a dark palette for those long days of coding.",
   "publisher": "AyushL",
   "author": {
     "name": "Ayush Lal"
   },
-  "version": "2.5.1",
+  "version": "3.0.0",
   "engines": {
     "vscode": "^1.46.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ayush-lal/nightfall-vscode-theme"
+    "url": "https://github.com/ayush-lal/darkly-vscode-theme"
   },
   "bugs": {
-    "url": "https://github.com/ayush-lal/nightfall-vscode-theme/issues"
+    "url": "https://github.com/ayush-lal/darkly-vscode-theme/issues"
   },
   "galleryBanner": {
     "color": "#09131b",
@@ -33,9 +33,9 @@
   "contributes": {
     "themes": [
       {
-        "label": "Nightfall Theme",
+        "label": "Darkly Theme",
         "uiTheme": "vs-dark",
-        "path": "./themes/Nightfall-theme.json"
+        "path": "./themes/darkly-theme.json"
       }
     ]
   }
